--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="hint_username">Nombre de usuario</string>
     <string name="text_go_login">Si ya dispones de una cuenta, inicia sesión aquí.</string>
     <string name="btn_signup">Registrarme</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
