--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_prueba">PruebaActivity</string>
     <string name="toolbar_title_home">Inicio</string>
+    <string name="text_twittear">Twittear</string>
+    <string name="text_message_tweet">¿Qué está pasando?</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
