--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,10 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="delete_tweet_btn">Eliminar tweet</string>
+    <string name="nombre_de_usuario">Nombre de usuario</string>
+    <string name="email">Email</string>
+    <string name="current_password">Contraseña actual</string>
+    <string name="button_save">Guardar</string>
+    <string name="change_password">Modificar contraseña</string>
 
 </resources>
