Añadimos scroll y nuevos campos de texto a la vista del perfil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,7 @@
     <string name="current_password">Contraseña actual</string>
     <string name="button_save">Guardar</string>
     <string name="change_password">Modificar contraseña</string>
+    <string name="website">Website</string>
+    <string name="descripcion_e_intereses">Descripción e intereses</string>
 
 </resources>
